fixes bug 190840 "If connection times out, no error messages displayed" r=dougt sr=bzbarsky a=asa